# spare-change

./: .gitignore  README.md  archivist.config.toon  config.donor-alice.yaml  config.donor-bob.yaml  config.donor-charlie.yaml  config.example.yaml  pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agent/: config.py  daemon.py  runner.py  schemas.py  window.py
data/: registered_projects.json
distributor/: artifacts.py  main.py  schemas.py  store.py
docs/: PITCH.md  closing.html
docs/sample-outputs/: scrapling-mixins-review.md
examples/: untyped_sample.py
scripts/: demo.sh  file_issue.sh  run_local.sh  run_multi_donor_demo.sh  seed_from_repo.sh  seed_task.sh  stop_multi_donor_demo.sh
templates/maintainer-kit/: README.md
templates/maintainer-kit/.github/: SPARE_CHANGE.md  spare-change-manifest.yaml
templates/maintainer-kit/.github/workflows/: spare-change.yml
templates/maintainer-kit/scripts/: queue_spare_change_tasks.py
tests/: test_auth.py  test_schemas.py  test_window.py
