[project]
name = "spare-change"
version = "0.1.0"
description = "Donate unused weekly Claude credits to open-source projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Apurv Ray" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
spare-change-agent = "agent.daemon:main"
spare-change-distributor = "distributor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["distributor*", "agent*"]
exclude = ["tests*", "scripts*", "_bmad*", "_bmad-output*", "documentation_notes*"]
